--- a/style.css
+++ b/style.css
@@ -537,18 +537,6 @@ section .title::after{
   color: crimson;
   background: none;
 }
-.mymailto {
-    margin-bottom: 20px;
-}
-
-.buttonContainer {
-    text-align:center;
-    margin-top: 15px;
-}
-
-.social_icon {
-    margin-right: 10px;
-}
 
 /* footer section style */
 footer{
@@ -693,3 +681,37 @@ footer span a:hover{
     }
 }
 
+.mymailto {
+    margin-bottom: 20px;
+}
+
+.buttonContainer {
+    text-align:center;
+    margin-top: 15px;
+}
+
+.social_icon {
+    margin-right: 10px;
+}
+
+.container-inner {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  
+  @media (min-width: 640px) {
+    .container-inner {
+      max-width: 640px;
+    }
+  }
+  @media (min-width: 768px) {
+    .container-inner {
+      max-width: 768px;
+    }
+  }
+  @media (min-width: 1024px) {
+    .container-inner {
+      max-width: 800px;
+    }
+  }
+  
